# OmniSched

./: CMakeLists.txt  README.md  customize.sh  module.prop
.github/workflows/: build.yml
common/: post-fs-data.sh  service.sh  system.prop
include/: config.h  core_sched.h  event_flow.h  utils.h
module/: post-fs-data.sh  service.sh  system.prop
src/: config.cpp  core_sched.cpp  main.cpp  utils.cpp  zygisk_core.cpp
webroot/: index.html
